@@ -25,6 +25,10 @@
 		"name" : "",
 		"url" : ""
 	},
+	"backlink" : {
+		"name" : "",
+		"url" : ""
+	},
 	"module" : "",
 	"id" : "",
 	"summary" : "",
