@@ -68,6 +68,7 @@ MathJax.Hub.Config({"HTML-CSS": { preferredFont: "TeX", availableFonts: ["STIX",
     </div>
   </a>
   <div>
+    <span id="dg-backlink"></span>
   </div>
  </div>
 </header>
